[package]
name = "bluez-async-ots"
version = "0.1.0"
authors = ["K. <kayo@illumium.org"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bluetooth Object Transfer Service (OTS) Client for bluez-async."
repository = "https://github.com/katyo/bluez-async-ots/"
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[workspace]
members = ["cli"]

[dependencies]
uuid = "1"
libc = "0.2"
socket2 = "0.5"
thiserror = "1"

[dependencies.log]
version = "0.4"

[dependencies.time]
version = "0.3"
default-features = false
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.futures]
version = "0.3"

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.bitflags]
version = "2"
features = ["bytemuck"]

[dependencies.bluez-async]
version = "0.7"

[dependencies.tokio]
version = "1"
default-features = false
features = ["time", "io-util"]

[features]
default = []
serde = ["dep:serde", "bitflags/serde", "uuid/serde"]
all = ["serde", "time", "chrono"]
