[package]
name = "bluez-async-ots"
version = "0.2.0"
authors = ["K. <kayo@illumium.org"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bluetooth Object Transfer Service (OTS) Client for bluez-async."
repository = "https://github.com/katyo/bluetooth-ots-rs/"
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[dependencies]
uuid = "1"
thiserror = "1"

[dependencies.log]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.ots-core]
version = "0.2"
path = "../core"

[dependencies.bluez-async]
version = "0.7"

[dependencies.tokio]
version = "1"
default-features = false
features = ["time", "io-util"]

[features]
default = []
serde = ["ots-core/serde"]
time = ["ots-core/time"]
chrono = ["ots-core/chrono"]
all = ["serde", "time", "chrono"]
