[package]
name = "bluez-async-ots"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bluetooth Object Transfer Service (OTS) Client for bluez-async."
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
repository.workspace = true
homepage.workspace = true

[dependencies]
uuid.workspace = true
thiserror.workspace = true
ots-core.workspace = true
bluez-async.workspace = true

[dependencies.log]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

[dependencies.futures-util]
workspace = true

[dependencies.tokio]
workspace = true
features = ["time", "io-util"]

[features]
default = []
serde = ["ots-core/serde"]
time = ["ots-core/time"]
chrono = ["ots-core/chrono"]
all = ["serde", "time", "chrono"]
