[package]
name = "ots-client"
version = "0.2.0"
authors = ["K. <kayo@illumium.org"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bluetooth Object Transfer Service (OTS) Client command-line tool."
repository = "https://github.com/katyo/bluetooth-ots-rs/"
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["command-line-utilities"]

[dependencies]
hex_pp = "0.1"
either = "1"
thiserror = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.5"

[dependencies.bluez-async]
version = "0.7"

[dependencies.bluez-async-ots]
path = ".."

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread", "fs", "io-std"]
