[package]
name = "ots-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bluetooth Object Transfer Service (OTS) Client command-line tool."
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["command-line-utilities"]
repository.workspace = true
homepage.workspace = true

[dependencies]
hex_pp.workspace = true
either.workspace = true
thiserror.workspace = true
clap.workspace = true
bluez-async.workspace = true
bluez-async-ots.workspace = true

[dependencies.log]
workspace = true
optional = true

[dependencies.pretty_env_logger]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt", "rt-multi-thread", "fs", "io-std"]

[features]
default = ["log"]
log = ["dep:log", "bluez-async-ots/log", "pretty_env_logger"]
tracing = ["dep:tracing", "tracing-subscriber"]
