[package]
name = "ots-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bluetooth Object Transfer Service (OTS) core."
keywords = ["ble", "bluetooth", "bluez", "ots", "object-transfer"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
repository.workspace = true
homepage.workspace = true

[dependencies]
uuid.workspace = true
libc.workspace = true
socket2.workspace = true
thiserror.workspace = true
macaddr.workspace = true
bitflags.workspace = true

[dependencies.time]
workspace = true
optional = true

[dependencies.chrono]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = []
serde = ["dep:serde", "bitflags/serde", "uuid/serde"]
all = ["serde", "time", "chrono"]
